# rust-roguelike-ui-manager

./: Cargo.toml  readme.md  todo.md
engine/: cargo.toml
engine/src/: lib.rs  map.rs
engine/src/worldgen/: mod.rs
src/: colors.rs  input_handler.rs  main.rs  map.rs  palette.rs  screen.rs
src/assets/: cp437_converter.rs  mod.rs  sprites.rs
src/cp437/: converter.rs  mod.rs  sprites.rs
src/screen/: console.rs  mod.rs
src/worldgen/: mod.rs  utils.rs  world.rs
